# ThePit

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  Makefile.macos  build-linux.sh  build-mac.sh  build-win.bat  build.bat  build.sh
docs/: CodingStyle.md  TODO.md
src/: AudioManager.cpp  AudioManager.h  Camera.cpp  Camera.h  Common.h  Cube.cpp  Cube.h  DataTypes.h  DataTypes.inl  DebugGraphics.cpp  DebugGraphics.h  DebugShapes.cpp  DebugShapes.h  DrawState.cpp  DrawState.h  Engine.cpp  Engine.h  FileUtils.cpp  FileUtils.h  Geometry.cpp  Geometry.h  Graphics.cpp  Graphics.h  Input.cpp  Input.h  Log.cpp  Log.h  MacOS_Main.mm  Main.cpp  Main.mm  Material.cpp  Material.h  Math.h  Mesh.cpp  Mesh.h  MeshUtils.cpp  MeshUtils.h  Platform.h  Shader.cpp  Shader.h  (+7 more)
src/engine/geometry/: cube.cpp  cube.h  geometry.cpp  geometry.h
src/engine/material/: cube-sapp.glsl.h  material.cpp  material.h
src/engine/mesh/: mesh.cpp  mesh.h
src/glsl/: cube-sapp.glsl.h  texcube-sapp.glsl  texcube-sapp.glsl.h  thepit-triangle.glsl.h  thepit-vxcolor.glsl.h  vxcolor.glsl.h  vxcolor_f.glsl  vxcolor_v.glsl  vxcolortexture_f.glsl  vxcolortexture_v.glsl  vxtexture_f.glsl  vxtexture_v.glsl  vxunicolor_f.glsl  vxunicolor_v.glsl
src/lib/: HandmadeMath.h
utils/: shell.nix
